--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ body {
   background-color: rgba(41, 41, 41, .7);
   margin: 0px 20px 20px 0px;
   border: none;
+  float: left;
 }
 input {
   background-color: #171717;
@@ -40,4 +41,14 @@ input {
 .list-group-item  {
   background-color:  rgba(41, 41, 41, .7);
   font-size: 12px;
+}
+.output {
+  font-weight: bolder;
+}
+.header {
+  width: 100%;
+  display: block;
+}
+.over {
+  display: none;
 }
